# LuOS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  config.h  main.c  memmap_default_rp2040.ld
AppShell/apps/: CMakeLists.txt
AppShell/i2ckbd/: i2ckbd.h
AppShell/lcdspi/: CMakeLists.txt  lcdspi.c  lcdspi.h
AppShell/lcdspi/fonts/: LuOS_System_Font.h  font1.h
AppShell/splitter/: CMakeLists.txt  splitter.c  splitter.h
apps/: CMakeLists.txt  app_list.h  manager.c  manager.h
apps/fileX/: main.c
apps/filos/: filos.c
apps/iowiz/: iowiz.c  iowiz.h
director/: CMakeLists.txt  director.c  director.h
i2ckbd/: CMakeLists.txt  i2ckbd.c
lcdspi/: CMakeLists.txt  lcdspi.c  lcdspi.h
manager/: CMakeLists.txt  app_list.h  manager.c  manager.h
src/: CMakeLists.txt
src/GSM/: CMakeLists.txt  GSM.c  GSM.h  LISTS.h
src/apps/: CMakeLists.txt
src/apps/iowiz/: CMakeLists.txt  iowiz.c  iowiz.h
src/apps/test/: CMakeLists.txt  test.c
src/i2ckbd/: i2ckbd.c
src/include/: debug.h
src/lcdspi/: lcdspi.c  lcdspi.h
src/lcdspi/fonts/: LuOS_System_Font.h  font1.h
src/splitter/: CMakeLists.txt  DEAL.h  deal.h  keyboard_define.h  lcdspi_core1_wrap.h  splitter.c  splitter.h
